fixed some layout issues

--- a/src/pages/product-page/product-info/product-info.module.scss
+++ b/src/pages/product-page/product-info/product-info.module.scss
@@ -3,12 +3,10 @@
 .root {
     font: $paragraph-font;
     display: grid;
-    grid-template-rows: 1fr;
     width: 70%;
     padding-top: 20px;
     gap: 10px;
     text-wrap: pretty;
-    position: absolute;
 
 }
 
