--- a/src/pages/product-page/product-page.module.scss
+++ b/src/pages/product-page/product-page.module.scss
@@ -24,6 +24,7 @@
     flex-direction: column;
     align-items: stretch;
     padding-top: 20px;
+    width: 50%;
 }
 
 .no-product {
@@ -38,5 +39,4 @@
 }
 
 .productInfo {
-    position: relative;
 }
